--- a/covid-19-portugal_confirmados.ipynb
+++ b/covid-19-portugal_confirmados.ipynb
@@ -45,6 +45,7 @@
        "      <th></th>\n",
        "      <th>Dia</th>\n",
        "      <th>Confirmados</th>\n",
+       "      <th>Obitos</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -52,296 +53,344 @@
        "      <th>0</th>\n",
        "      <td>60</td>\n",
        "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>61</td>\n",
        "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>62</td>\n",
        "      <td>4</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>63</td>\n",
        "      <td>6</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>64</td>\n",
        "      <td>9</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>65</td>\n",
        "      <td>13</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>66</td>\n",
        "      <td>21</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>67</td>\n",
        "      <td>30</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>68</td>\n",
        "      <td>39</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>69</td>\n",
        "      <td>41</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>70</td>\n",
        "      <td>59</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>71</td>\n",
        "      <td>78</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>72</td>\n",
        "      <td>112</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>73</td>\n",
        "      <td>169</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>74</td>\n",
        "      <td>245</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>75</td>\n",
        "      <td>331</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>76</td>\n",
        "      <td>448</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>77</td>\n",
        "      <td>642</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>78</td>\n",
        "      <td>785</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>79</td>\n",
        "      <td>1020</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>80</td>\n",
        "      <td>1280</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>21</th>\n",
        "      <td>81</td>\n",
        "      <td>1600</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>22</th>\n",
        "      <td>82</td>\n",
        "      <td>2060</td>\n",
+       "      <td>23</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>23</th>\n",
        "      <td>83</td>\n",
        "      <td>2362</td>\n",
+       "      <td>33</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>24</th>\n",
        "      <td>84</td>\n",
        "      <td>2995</td>\n",
+       "      <td>43</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25</th>\n",
        "      <td>85</td>\n",
        "      <td>3544</td>\n",
+       "      <td>60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>26</th>\n",
        "      <td>86</td>\n",
        "      <td>4268</td>\n",
+       "      <td>76</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>27</th>\n",
        "      <td>87</td>\n",
        "      <td>5170</td>\n",
+       "      <td>100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>28</th>\n",
        "      <td>88</td>\n",
        "      <td>5962</td>\n",
+       "      <td>119</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>29</th>\n",
        "      <td>89</td>\n",
        "      <td>6408</td>\n",
+       "      <td>140</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>30</th>\n",
        "      <td>90</td>\n",
        "      <td>7443</td>\n",
+       "      <td>160</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>31</th>\n",
        "      <td>91</td>\n",
        "      <td>8251</td>\n",
+       "      <td>187</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>32</th>\n",
        "      <td>92</td>\n",
        "      <td>9034</td>\n",
+       "      <td>209</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33</th>\n",
        "      <td>93</td>\n",
        "      <td>9886</td>\n",
+       "      <td>246</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>34</th>\n",
        "      <td>94</td>\n",
        "      <td>10524</td>\n",
+       "      <td>266</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>35</th>\n",
        "      <td>95</td>\n",
        "      <td>11278</td>\n",
+       "      <td>295</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>36</th>\n",
        "      <td>96</td>\n",
        "      <td>11730</td>\n",
+       "      <td>311</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>37</th>\n",
        "      <td>97</td>\n",
        "      <td>12442</td>\n",
+       "      <td>345</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>38</th>\n",
        "      <td>98</td>\n",
        "      <td>13141</td>\n",
+       "      <td>380</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>39</th>\n",
        "      <td>99</td>\n",
        "      <td>13956</td>\n",
+       "      <td>409</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>40</th>\n",
        "      <td>100</td>\n",
        "      <td>15472</td>\n",
+       "      <td>435</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>41</th>\n",
        "      <td>101</td>\n",
        "      <td>15987</td>\n",
+       "      <td>470</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>42</th>\n",
        "      <td>102</td>\n",
        "      <td>16585</td>\n",
+       "      <td>504</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>43</th>\n",
        "      <td>103</td>\n",
        "      <td>16934</td>\n",
+       "      <td>535</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>44</th>\n",
        "      <td>104</td>\n",
        "      <td>17448</td>\n",
+       "      <td>567</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>45</th>\n",
        "      <td>105</td>\n",
        "      <td>18091</td>\n",
+       "      <td>599</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>46</th>\n",
        "      <td>106</td>\n",
        "      <td>18841</td>\n",
+       "      <td>629</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>47</th>\n",
        "      <td>107</td>\n",
        "      <td>19022</td>\n",
+       "      <td>657</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    Dia  Confirmados\n",
-       "0    60            0\n",
-       "1    61            2\n",
-       "2    62            4\n",
-       "3    63            6\n",
-       "4    64            9\n",
-       "5    65           13\n",
-       "6    66           21\n",
-       "7    67           30\n",
-       "8    68           39\n",
-       "9    69           41\n",
-       "10   70           59\n",
-       "11   71           78\n",
-       "12   72          112\n",
-       "13   73          169\n",
-       "14   74          245\n",
-       "15   75          331\n",
-       "16   76          448\n",
-       "17   77          642\n",
-       "18   78          785\n",
-       "19   79         1020\n",
-       "20   80         1280\n",
-       "21   81         1600\n",
-       "22   82         2060\n",
-       "23   83         2362\n",
-       "24   84         2995\n",
-       "25   85         3544\n",
-       "26   86         4268\n",
-       "27   87         5170\n",
-       "28   88         5962\n",
-       "29   89         6408\n",
-       "30   90         7443\n",
-       "31   91         8251\n",
-       "32   92         9034\n",
-       "33   93         9886\n",
-       "34   94        10524\n",
-       "35   95        11278\n",
-       "36   96        11730\n",
-       "37   97        12442\n",
-       "38   98        13141\n",
-       "39   99        13956\n",
-       "40  100        15472\n",
-       "41  101        15987\n",
-       "42  102        16585\n",
-       "43  103        16934\n",
-       "44  104        17448\n",
-       "45  105        18091\n",
-       "46  106        18841\n",
-       "47  107        19022"
+       "    Dia  Confirmados  Obitos\n",
+       "0    60            0       0\n",
+       "1    61            2       0\n",
+       "2    62            4       0\n",
+       "3    63            6       0\n",
+       "4    64            9       0\n",
+       "5    65           13       0\n",
+       "6    66           21       0\n",
+       "7    67           30       0\n",
+       "8    68           39       0\n",
+       "9    69           41       0\n",
+       "10   70           59       0\n",
+       "11   71           78       0\n",
+       "12   72          112       0\n",
+       "13   73          169       0\n",
+       "14   74          245       0\n",
+       "15   75          331       0\n",
+       "16   76          448       1\n",
+       "17   77          642       2\n",
+       "18   78          785       3\n",
+       "19   79         1020       6\n",
+       "20   80         1280      12\n",
+       "21   81         1600      14\n",
+       "22   82         2060      23\n",
+       "23   83         2362      33\n",
+       "24   84         2995      43\n",
+       "25   85         3544      60\n",
+       "26   86         4268      76\n",
+       "27   87         5170     100\n",
+       "28   88         5962     119\n",
+       "29   89         6408     140\n",
+       "30   90         7443     160\n",
+       "31   91         8251     187\n",
+       "32   92         9034     209\n",
+       "33   93         9886     246\n",
+       "34   94        10524     266\n",
+       "35   95        11278     295\n",
+       "36   96        11730     311\n",
+       "37   97        12442     345\n",
+       "38   98        13141     380\n",
+       "39   99        13956     409\n",
+       "40  100        15472     435\n",
+       "41  101        15987     470\n",
+       "42  102        16585     504\n",
+       "43  103        16934     535\n",
+       "44  104        17448     567\n",
+       "45  105        18091     599\n",
+       "46  106        18841     629\n",
+       "47  107        19022     657"
       ]
      },
      "execution_count": 2,
@@ -352,7 +401,7 @@
    "source": [
     "# faz a leitura do ficheiro de dados localizado no github\n",
     "\n",
-    "url = 'https://raw.githubusercontent.com/Miguel-Salgado/covid-19/master/casos-confirmados-de-cov.csv'\n",
+    "url = 'https://raw.githubusercontent.com/Miguel-Salgado/covid-19/master/obitos-e-casos-confirmados-de-cov.csv'\n",
     "df = pd.read_csv(url,error_bad_lines=False)\n",
     "df.head(50)\n"
    ]
